Partly fixed controllers