@@ -8,6 +8,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
@@ -35,11 +36,20 @@ public class CategoryRepositoryImpl implements CategoryRepository {
     }
 
     @Override
-    public Optional<Category> findById(Long id) {
-        return jpaRepository.findById(id)
-                .map(mapper::toDomain);
+    public List<Category> findByUserIdAndNotDeletedWithDescOrder(Long userId) {
+        List<CategoryEntity> categories = jpaRepository.findByUserIdAndDeletedAtIsNullOrderByIdDesc(userId);
+        return categories
+                .stream()
+                .map(mapper::toDomain)
+                .toList();
     }
 
+//    @Override
+//    public Optional<Category> findById(Long id) {
+//        return jpaRepository.findById(id)
+//                .map(mapper::toDomain);
+//    }
+//
     @Override
     public Optional<Category> findByIdAndNotDeleted(Long id) {
         return jpaRepository.findByIdAndDeletedAtIsNull(id)
@@ -47,26 +57,34 @@ public class CategoryRepositoryImpl implements CategoryRepository {
     }
 
     @Override
-    public List<Category> findByUserIdAndNotDeleted(Long userId) {
-        return jpaRepository.findByUserIdAndDeletedAtIsNull(userId).stream()
+    public List<Category> findByIdsAndDeletedAtIsNull(Set<Long> ids) {
+        return jpaRepository.findByIdsAndDeletedAtIsNull(ids)
+                .stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
-
-    @Override
-    public List<Category> findByUserId(Long userId) {
-        return jpaRepository.findByUserId(userId).stream()
-                .map(mapper::toDomain)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public boolean existsById(Long id) {
-        return jpaRepository.existsById(id);
-    }
-
-    @Override
-    public void deleteById(Long id) {
-        jpaRepository.deleteById(id);
-    }
+//
+//    @Override
+//    public List<Category> findByUserIdAndNotDeleted(Long userId) {
+//        return jpaRepository.findByUserIdAndDeletedAtIsNull(userId).stream()
+//                .map(mapper::toDomain)
+//                .collect(Collectors.toList());
+//    }
+//
+//    @Override
+//    public List<Category> findByUserId(Long userId) {
+//        return jpaRepository.findByUserId(userId).stream()
+//                .map(mapper::toDomain)
+//                .collect(Collectors.toList());
+//    }
+//
+//    @Override
+//    public boolean existsById(Long id) {
+//        return jpaRepository.existsById(id);
+//    }
+//
+//    @Override
+//    public void deleteById(Long id) {
+//        jpaRepository.deleteById(id);
+//    }
 }
